[package]
name = "gmach-tools"
version = "1.0.0"
description = "Gmach Tools Management"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-all", "api-all", "custom-protocol"] }
# תוספי Tauri בגרסת v1 התואמת
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# אופטימיזציה מקסימלית למהירות ומינימום משקל
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
